<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PApple2</string>
    <string name="hello_world">Hello world!</string>
    <string name="newProject">New Project</string>
    <string name="loadProject">Load Project</string>
    <string name="shareProject">Share Project</string>
    <string name="exportProject">Export Project</string>
    <string name="importProject">Import/Export Project</string>
    <string name="logoImage">Logo Image</string>
    <string name="title_activity_new_project">NewProject</string>
    <string name="title_activity_load_project">LoadProject</string>
    <string name="title_activity_export_project">ExportProject</string>
    <string name="title_activity_import_project">ImportProject</string>
    <string name="title_activity_share_project">ShareProject</string>
    <string name="title_activity_edit_part">EditPart</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_model">SelectModelActivity</string>
    <string name="dialog_message">Click OK to save your project</string>
    <string name="dialog_title">Save Project?</string>
    <string name="title_activity_select_laptop">SelectLaptop</string>
    <string name="selectModel">Select model</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_3d_model">3D Preview</string>
    <string name="itemTitleImg">Itemtitle Image</string>
    <string name="itemImage">Item image</string>
    

</resources>